Right branch in actions

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install .
+          pip install zarr
           pip install setuptools wheel twine
           pip install pytest
       - name: Test with pytest and build coverage report
