--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          pip install .
+          pip install -e .
           pip install zarr
           pip install pytest
       - name: Test with pytest 
