--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install git 
+          sudo apt install -y gettext
 
           # clone wavpack
           git clone https://github.com/dbry/WavPack
