--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,15 +32,18 @@ jobs:
           ./autogen.sh
           sudo make install
           cd ..
-      - name: WavPack binaries versions
+      - name: WavPack binaries version (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          if [ ${{ matrix.os }} == 'ubuntu-latest' ]; then
-              ./wavpack_numcodecs/lib/linux/wavpack --version
-          elif [ ${{ matrix.os }} == 'macos-latest' ]; then
-              ./wavpack_numcodecs/lib/macos/wavpack --version
-          elif [ ${{ matrix.os }} == 'windows-latest' ]; then
-              .\wavpack_numcodecs\lib\windows\wavpack.exe --version
-          fi
+          ./wavpack_numcodecs/lib/linux/wavpack --version
+      - name: WavPack binaries version (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          ./wavpack_numcodecs/lib/macos/wavpack --version
+      - name: WavPack binaries version (Windows)
+        if: matrix.os == 'macos-latest'
+        run: |
+          .\wavpack_numcodecs\lib\windows\wavpack.exe --version
       - name: Install dependencies
         run: |
           pip install -e .
