Add Cython dependency

--- a/.github/workflows/python-package-cython.yml
+++ b/.github/workflows/python-package-cython.yml
@@ -45,6 +45,7 @@ jobs:
           cd ..
       - name: Install dependencies
         run: |
+          pip install Cython
           pip install -e wavpack_cython
           pip install zarr
           pip install pytest
