--- a/.github/workflows/python-package-cython-binaries.yml
+++ b/.github/workflows/python-package-cython-binaries.yml
@@ -1,4 +1,4 @@
-name: Cython - Python Package using Conda
+name: Cython - Python Package using pre-built
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        os: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
       - uses: s-weigand/setup-conda@v1
