--- a/.github/workflows/python-package-cython-binaries.yml
+++ b/.github/workflows/python-package-cython-binaries.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: "ubuntu-latest"
+        os: ["ubuntu-latest"]
     steps:
       - uses: actions/checkout@v2
       - uses: s-weigand/setup-conda@v1
